tests/functional/lang/eval-fail-toJSON-mutual-recursion.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail-toJSON-mutual-recursion.nix:9:1:
            8| in
            9| builtins.toJSON a
             | ^
           10|

       … while evaluating attribute 'x'
         at /pwd/lang/eval-fail-toJSON-mutual-recursion.nix:3:5:
            2|   a = {
            3|     x = b;
             |     ^
            4|   };

       … while evaluating attribute 'y'
         at /pwd/lang/eval-fail-toJSON-mutual-recursion.nix:6:5:
            5|   b = {
            6|     y = a;
             |     ^
            7|   };

       error: infinite recursion encountered while converting Nix value to JSON: the value at .x.y is the same as the top-level value (only cycle-free data can be represented in JSON)
       at /pwd/lang/eval-fail-toJSON-mutual-recursion.nix:6:5:
            5|   b = {
            6|     y = a;
             |     ^
            7|   };
